--- a/artist.html
+++ b/artist.html
@@ -11,7 +11,14 @@
     <meta property="og:title" content="">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
-    <meta property="og:description" content="">
+    <meta property="og:description" content=""><link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="fav/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="fav/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="fav/manifest.json">
+    <link rel="mask-icon" href="fav/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="POW! WOW!">
+    <meta name="application-name" content="POW! WOW!">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry&amp;v=3.22&amp;key=AIzaSyC_kLitJTrG9CrohPBaoPDu15qjBu7F1Lg"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/foundation.js"></script>
@@ -273,34 +280,34 @@
         <div class="gallery-wrap">
           <p class="index-title small-title">Gallery</p>
           <div class="gallery">
-            <div class="artist-gallery revealer"><a href="img/colasa-painting0.jpg" data-lightbox="lightbox"><img src="img/colasa-painting0.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting0.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting0.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting1.jpg" data-lightbox="lightbox"><img src="img/colasa-painting1.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting1.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting1.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting2.jpg" data-lightbox="lightbox"><img src="img/colasa-painting2.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting2.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting2.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting3.jpg" data-lightbox="lightbox"><img src="img/colasa-painting3.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting3.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting3.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting4.jpg" data-lightbox="lightbox"><img src="img/colasa-painting4.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting4.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting4.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting5.jpg" data-lightbox="lightbox"><img src="img/colasa-painting5.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting5.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting5.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting6.jpg" data-lightbox="lightbox"><img src="img/colasa-painting6.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting6.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting6.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting7.jpg" data-lightbox="lightbox"><img src="img/colasa-painting7.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting7.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting7.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting8.jpg" data-lightbox="lightbox"><img src="img/colasa-painting8.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting8.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting8.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
-            <div class="artist-gallery revealer"><a href="img/colasa-painting9.jpg" data-lightbox="lightbox"><img src="img/colasa-painting9.jpg"></a>
+            <div class="artist-gallery revealer"><a href="img/colasa-painting9.jpg" data-lightbox="lightbox" class="borderless"><img src="img/colasa-painting9.jpg"></a>
               <div class="card-bg-fix"></div>
             </div>
           </div>
