--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <meta property="og:title" content="">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
-    <meta property="og:description" content="">
+    <meta property="og:description" content=""><link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="fav/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="fav/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="fav/manifest.json">
+    <link rel="mask-icon" href="fav/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="POW! WOW!">
+    <meta name="application-name" content="POW! WOW!">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry&amp;v=3.22&amp;key=AIzaSyC_kLitJTrG9CrohPBaoPDu15qjBu7F1Lg"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/foundation.js"></script>
@@ -21,7 +28,6 @@
     <script src="js/maplace.js"></script>
     <script src="js/markerclusterer.js"></script>
     <script src="js/barba.min.js"></script>
-    <script src="js/jquery.youtubebackground.js"></script>
     <script src="js/jquery.grid-a-licious.js"></script>
     <script src="js/scrollTo.js"></script>
     <link rel="stylesheet" href="font/aller.css">
@@ -215,10 +221,7 @@
       	[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el){	
       		new SelectFx(el);
       	});
-      	$('#video').YTPlayer({
-      	    fitToBackground: true,
-      	    videoId: 'QAIw9Lf3320'
-      	});
+      
       	
       	//- BackgroundCheck.init({
       	//- 	targets: '.panel-content',
@@ -539,9 +542,6 @@
       </div>
       <div class="content">
         <div class="overlay-wrap">
-          <div class="index-video-wrap">
-            <div id="video"></div>
-          </div>
           <div class="banner-slogan">
             <div class="video-space">
               <p class="main-slogan">over 50 artists from all over the world</p>
