--- a/participants.html
+++ b/participants.html
@@ -11,7 +11,14 @@
     <meta property="og:title" content="">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
-    <meta property="og:description" content="">
+    <meta property="og:description" content=""><link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="fav/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="fav/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="fav/manifest.json">
+    <link rel="mask-icon" href="fav/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="POW! WOW!">
+    <meta name="application-name" content="POW! WOW!">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/foundation.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -204,10 +211,10 @@
                 <select class="cs-select filter-select cs-skin-underline">
                   <option selected disabled>Choose Filter</option>
                   <option value="none">None</option>
-                  <option value="country">Events</option>
-                  <option value="date">Year</option>
                   <option value="art">Graffiti Artist</option>
                   <option calue="music">Music Artist</option>
+                  <option value="country">Events</option>
+                  <option value="date">Year</option>
                 </select>
               </div>
             </div>
