--- a/event2.html
+++ b/event2.html
@@ -251,12 +251,12 @@
     </script>
   </head>
   <body>
-    <div class="loader">
-      <div class="circle"></div>
-      <div class="circle-small"></div>
-      <div class="circle-big"></div>
-      <div class="circle-inner-inner"></div>
-      <div class="circle-inner"></div>
+    <div class="loader-bg">
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
     </div>
     <div class="wrapper">
       <div class="header row">
