--- a/mural-tab1.html
+++ b/mural-tab1.html
@@ -240,12 +240,12 @@
     </script>
   </head>
   <body>
-    <div class="loader">
-      <div class="circle"></div>
-      <div class="circle-small"></div>
-      <div class="circle-big"></div>
-      <div class="circle-inner-inner"></div>
-      <div class="circle-inner"></div>
+    <div class="loader-bg">
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
     </div>
     <div class="wrapper">
       <div class="header row">
@@ -253,14 +253,22 @@
         <div class="medium-10 columns header-nav mobile-hide">
           <div class="row">
             <div class="medium-3 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
-            <div class="medium-3 columns"><a href="event-list.html" class="linkFade">EVENTS</a></div>
+            <div class="medium-3 columns"><a href="event-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="medium-3 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
             <div class="medium-3 columns"><a href="location.html" class="linkFade">LOCATION</a></div>
           </div>
         </div>
         <div class="medium-1 columns header-menu mobile-fix">
           <div> <span class="menu-button">
-              <button type="button" role="button" aria-label="Toggle Navigation" class="lines-button x"><span class="lines"></span></button></span></div>
+              <button type="button" role="button" aria-label="Toggle Navigation" class="lines-button x"><span class="lines"> </span></button></span></div>
+        </div>
+        <div class="lang-box-wrapper">
+          <div class="lang-select-box">
+            <select class="cs-select lang-select cs-skin-underline">
+              <option selected="selected" value="eng">Eng</option>
+              <option value="chi">Chi</option>
+            </select>
+          </div>
         </div>
       </div>
       <div class="screen-menu sm-overlay"><span class="menu-button">
@@ -273,14 +281,12 @@
             </form>
           </div>
           <div class="sm-menu row">
-            <div class="medium-6 small-12 columns"><a href="#" class="linkFade">NEWS</a></div>
-            <div class="medium-6 small-12 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
-            <div class="medium-6 small-12 columns"><a href="activities.html" class="linkFade">EVENT</a></div>
-            <div class="medium-6 small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
-            <div class="medium-6 small-12 columns"><a href="#" class="linkFade">PROFILES</a></div>
-            <div class="medium-6 small-12 columns"><a href="location.html" class="linkFade">LOCATION</a></div>
-            <div class="medium-6 small-12 columns"><a href="#" class="linkFade">ABOUT</a></div>
-            <div class="medium-6 small-12 columns"><a href="#" class="linkFade">MEMBER PROFILE</a></div>
+            <div class="small-12 columns"><a href="index.html" class="linkFade">HOME</a></div>
+            <div class="small-12 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
+            <div class="small-12 columns"><a href="activities.html" class="linkFade">FESTIVALS</a></div>
+            <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
+            <div class="small-12 columns"><a href="location.html" class="linkFade">LOCATION</a></div>
+            <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
           </div>
         </div>
       </div>
@@ -371,11 +377,8 @@
           <div class="medium-6 small-12 columns footer-nav-block">
             <div class="footer-nav">
               <div><a href="index.html" class="linkFade">Home</a></div>
-              <div><a href="#" class="linkFade">News</a></div>
               <div><a href="mural-list.html" class="linkFade">Murals</a></div>
-              <div><a href="event-list.html" class="linkFade">Event</a></div>
-            </div>
-            <div class="footer-nav">
+              <div><a href="index-festival.html" class="linkFade">Festivals</a></div>
               <div><a href="participants.html" class="linkFade">Participants</a></div>
               <div><a href="location.html" class="linkFade">Location</a></div>
               <div><a href="#" class="linkFade">About</a></div>
