--- a/about.html
+++ b/about.html
@@ -33,9 +33,7 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/selectFx.js"></script>
-    <script src="js/particles.js"></script>
     <script src="js/scrollTo.js"></script>
-    <script src="js/barba.min.js"></script>
     <script src="js/jquery.grid-a-licious.js"></script>
     <script src="js/timeliner.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
@@ -70,7 +68,6 @@
       	}); 
       	
       	
-      	$('.parallax').parallax();
       	$(window).scroll(function(){
       		if ($(this).scrollTop() > 50) {
       			$('.back-to-top').addClass('back-top-show');
@@ -140,7 +137,7 @@
         <div class="medium-10 columns header-nav mobile-hide">
           <div class="row">
             <div class="medium-3 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
-            <div class="medium-3 columns"><a href="event-list.html" class="linkFade">FESTIVALS</a></div>
+            <div class="medium-3 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="medium-3 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
             <div class="medium-3 columns"><a href="location.html" class="linkFade">LOCATION</a></div>
           </div>
@@ -170,10 +167,18 @@
           <div class="sm-menu row">
             <div class="small-12 columns"><a href="index.html" class="linkFade">HOME</a></div>
             <div class="small-12 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
-            <div class="small-12 columns"><a href="activities.html" class="linkFade">FESTIVALS</a></div>
+            <div class="small-12 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
             <div class="small-12 columns"><a href="location.html" class="linkFade">LOCATION</a></div>
             <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
+            <div class="sm-lang-box-wrapper">
+              <div class="lang-select-box">
+                <select class="cs-select lang-select cs-skin-underline">
+                  <option selected="selected" value="eng">Eng</option>
+                  <option value="chi">Chi</option>
+                </select>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -280,7 +285,7 @@
             <div class="footer-nav">
               <div><a href="index.html" class="linkFade">Home</a></div>
               <div><a href="mural-list.html" class="linkFade">Murals</a></div>
-              <div><a href="index-festival.html" class="linkFade">Festivals</a></div>
+              <div><a href="festival-list.html" class="linkFade">Festivals</a></div>
               <div><a href="participants.html" class="linkFade">Participants</a></div>
               <div><a href="location.html" class="linkFade">Location</a></div>
               <div><a href="#" class="linkFade">About</a></div>
@@ -290,10 +295,8 @@
             <div class="footer-social">
               <p class="footer-title">SOCIAL</p>
               <div class="footer-nav">
-                <div><a href="# " class="linkFade">Facebook</a></div>
-                <div><a href="#" class="linkFade">Instagram</a></div>
-                <div><a href="#" class="linkFade">Pinterest</a></div>
-                <div><a href="#" class="linkFade">Youtube</a></div>
+                <div><a href="https://www.facebook.com/PowWowHawaii/" class="linkFade">Facebook</a></div>
+                <div><a href="https://www.instagram.com/powwowworldwide/" class="linkFade">Instagram</a></div>
               </div>
             </div>
           </div>
