--- a/interview-list.html
+++ b/interview-list.html
@@ -214,7 +214,7 @@
         <div class="parallax-container">
           <div class="parallax"><img src="img/banner1.jpg"></div>
           <div class="banner-slogan">
-            <p class="page-slogan">interview</p>
+            <p class="page-slogan">Mess-Age x POW! WOW! Taiwan</p>
             <p class="page-sub-slogan">hear what these artists have to say</p>
             <div class="banner-button arrow-down"><a id="contentlink" href="#">SEE INTERVIEWS</a></div>
           </div>
