--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
             <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
             <div class="small-12 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
             <div class="small-12 columns"><a href="project-list.html" class="linkFade">PROJECTS</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">EDUCATION</a></div>
+            <div class="small-12 columns"><a href="education-list.html" class="linkFade">EDUCATION</a></div>
             <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
             <div class="small-12 columns"><a href="http://shop.powwowhawaii.com/" target="_blank">Shop	</a></div>
             <div class="sm-lang-box-wrapper">
@@ -290,7 +290,7 @@
               <div><a href="participants.html" class="linkFade">Participants</a></div>
               <div><a href="video-list.html" class="linkFade">Video</a></div>
               <div><a href="project-list.html" class="linkFade">Projects</a></div>
-              <div><a href="location.html" class="linkFade">Education</a></div>
+              <div><a href="education-list.html" class="linkFade">Education</a></div>
               <div><a href="about.html" class="linkFade">About</a></div>
               <div><a href="http://shop.powwowhawaii.com/" target="_blank">Shop</a></div>
             </div>
