--- a/interview-list.html
+++ b/interview-list.html
@@ -196,7 +196,7 @@
             <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
             <div class="small-12 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
             <div class="small-12 columns"><a href="project-list.html" class="linkFade">PROJECTS</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">EDUCATION</a></div>
+            <div class="small-12 columns"><a href="education-list.html" class="linkFade">EDUCATION</a></div>
             <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
             <div class="small-12 columns"><a href="http://shop.powwowhawaii.com/" target="_blank">Shop	</a></div>
             <div class="sm-lang-box-wrapper">
@@ -214,9 +214,9 @@
         <div class="parallax-container">
           <div class="parallax"><img src="img/banner1.jpg"></div>
           <div class="banner-slogan">
-            <p class="page-slogan">Mess-Age x POW! WOW! Taiwan</p>
-            <p class="page-sub-slogan">hear what these artists have to say</p>
-            <div class="banner-button arrow-down"><a id="contentlink" href="#">SEE INTERVIEWS</a></div>
+            <p class="page-slogan">POW! WOW! EDUCATION</p>
+            <p class="page-sub-slogan">learn from the best of pow! wow!</p>
+            <div class="banner-button arrow-down"><a id="contentlink" href="#">SEE EDUCATIONS</a></div>
           </div>
         </div><a id="content" href="#"></a>
         <div class="index-block index-mural padding-top-120 padding-column">
@@ -320,7 +320,7 @@
               <div><a href="participants.html" class="linkFade">Participants</a></div>
               <div><a href="video-list.html" class="linkFade">Video</a></div>
               <div><a href="project-list.html" class="linkFade">Projects</a></div>
-              <div><a href="location.html" class="linkFade">Education</a></div>
+              <div><a href="education-list.html" class="linkFade">Education</a></div>
               <div><a href="about.html" class="linkFade">About</a></div>
               <div><a href="http://shop.powwowhawaii.com/" target="_blank">Shop</a></div>
             </div>
