--- a/interview.html
+++ b/interview.html
@@ -169,7 +169,7 @@
             <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
             <div class="small-12 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
             <div class="small-12 columns"><a href="project-list.html" class="linkFade">PROJECTS</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">EDUCATION</a></div>
+            <div class="small-12 columns"><a href="education-list.html" class="linkFade">EDUCATION</a></div>
             <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
             <div class="small-12 columns"><a href="http://shop.powwowhawaii.com/" target="_blank">Shop	</a></div>
             <div class="sm-lang-box-wrapper">
@@ -184,9 +184,9 @@
         </div>
       </div>
       <div class="content">
-        <div class="content padding-column p-bottom-50"><a href="javascript: history.go(-1)" class="prev-underline back-panel event-back"><i aria-hidden="true" class="fa fa-angle-left"></i><span>Back To Event</span></a>
+        <div class="content padding-column p-bottom-50"><a href="javascript: history.go(-1)" class="prev-underline back-panel event-back"><i aria-hidden="true" class="fa fa-angle-left"></i><span>Back To Interview</span></a>
           <div class="menu-divider"></div>
-          <p class="about-title small-title revealer">pear tarr (cambodia) interview</p>
+          <p class="about-title small-title revealer">pPOW! WOW! SCHOOL OF ART</p>
           <div class="powwow-history">
             <div class="pow-section revealer"> 
               <p class="interview-question">You lived between New Zealand and Cambodia, how did that impact your creative process?</p>
@@ -225,7 +225,7 @@
               <div><a href="participants.html" class="linkFade">Participants</a></div>
               <div><a href="video-list.html" class="linkFade">Video</a></div>
               <div><a href="project-list.html" class="linkFade">Projects</a></div>
-              <div><a href="location.html" class="linkFade">Education</a></div>
+              <div><a href="education-list.html" class="linkFade">Education</a></div>
               <div><a href="about.html" class="linkFade">About</a></div>
               <div><a href="http://shop.powwowhawaii.com/" target="_blank">Shop</a></div>
             </div>
